--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     }
     </style>
     <div class="iframe-container" translate="no">
-      <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=Y19mZjdkMjEyM2RhZGI3YmJhYmJmMTE3ZWJjZDQ2NWZiMTVhZDJiZmJjODliZTIzMjk5MzdmZjk0NWQ3MTJiOTMzQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y19sZTVkY3Rla2FuZm5xM2ZoamR2cjhic3I3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4&color=%23D50000" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-<br>
+      <iframe style="width:100%;height:25%;border:1px solid #777" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&src=Y19mZjdkMjEyM2RhZGI3YmJhYmJmMTE3ZWJjZDQ2NWZiMTVhZDJiZmJjODliZTIzMjk5MzdmZjk0NWQ3MTJiOTMzQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y19sZTVkY3Rla2FuZm5xM2ZoamR2cjhic3I3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4&color=%23D50000"scrolling="no">This browser does not support Iframe</iframe><br>
     <iframe style="width:100%;height:100%;border:1px solid #777" src="https://calendly.com/tierradelsol-1/3hours" scrolling="no"
     
     
