Fix Cleanly Hight to 2000

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ p {
 .content {
   padding: px;
   margin: 10px;
-height: 2200px;
+height: 1800px;
 }
 
 .sticky {
@@ -64,10 +64,11 @@ height: 2200px;
   <iframe style="width:100%;height:20%;border:1px solid #777"
             src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&title=Cleaning%20%26%20Reserved&src=Y19mZjdkMjEyM2RhZGI3YmJhYmJmMTE3ZWJjZDQ2NWZiMTVhZDJiZmJjODliZTIzMjk5MzdmZjk0NWQ3MTJiOTMzQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y19sZTVkY3Rla2FuZm5xM2ZoamR2cjhic3I3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4&color=%23D50000"
             scrolling="no">This browser does not support Iframe</iframe><br>
-        <iframe style="width:100%;height:100%;border:1px solid #777" src="https://calendly.com/tierradelsol-1/3hours"
+        <iframe style="width:100%;height:2000px;border:1px solid #777" src="https://calendly.com/tierradelsol-1/3hours"
             scrolling="no">This browser does not support Iframe</iframe>
-        <div class="inside">
-            <h4>Scroll Up</h4>
+           
+            <div class="inside">
+            
 
 <script>
 window.onscroll = function() {myFunction()};
