--- a/index.html
+++ b/index.html
@@ -108,6 +108,23 @@
         }
       </script>
 
+<div>     Duties for Clean up
+1- Check water level.  If the auto fill is not maintaining the level, let the president know
+2- Strain debris from pool using skimmer on the wall
+3- Clean restroom, put out new supplies if needed. Empty trash, report to president if supplies are needed
+4- Sweep & clean bathroom and deck
+5- Take pride in the pool and close umbrellas and stack chairs
+6- Remove trash after every visit
+</div> 
+
+<div>Pool Rules
+1- Children 0-5 must have an adult 16+ along
+2- Children 5-12 must have someone over 12
+3- No Running or Pushing
+4- One person at a time on the board
+5- Guests must be with a responsible member of the shareholders family.  Shareholders family defined as a direct family member, ie child/grandchild.
+</div>
+
 </body>
 
 </html>
