--- a/index.html
+++ b/index.html
@@ -69,7 +69,22 @@
 </head>
 
 <body>
-
+  <div>Duties for Clean up<br>
+    1- Check water level.  If the auto fill is not maintaining the level, let the president know<br>
+    2- Strain debris from pool using skimmer on the wall<br>
+    3- Clean restroom, put out new supplies if needed. Empty trash, report to president if supplies are needed<br>
+    4- Sweep & clean bathroom and deck<br>
+    5- Take pride in the pool and close umbrellas and stack chairs<br>
+    6- Remove trash after every visit<br>
+    </div> 
+    
+    <div>Pool Rules<br>
+    1- Children 0-5 must have an adult 16+ along<br>
+    2- Children 5-12 must have someone over 12<br>
+    3- No Running or Pushing<br>
+    4- One person at a time on the board<br>
+    5- Guests must be with a responsible member of the shareholders family.  Shareholders family defined as a direct family member, ie child/grandchild.<br>
+    </div>
   <div class="top-container">
     <a
       href="https://drive.google.com/drive/folders/0B__nLF-iUdQrZGR6NGI4VkZZaGM?resourcekey=0-p1g1iESK1I6YWuztg5UmSg&amp;usp=sharing">
@@ -108,22 +123,7 @@
         }
       </script>
 
-<div>     Duties for Clean up
-1- Check water level.  If the auto fill is not maintaining the level, let the president know
-2- Strain debris from pool using skimmer on the wall
-3- Clean restroom, put out new supplies if needed. Empty trash, report to president if supplies are needed
-4- Sweep & clean bathroom and deck
-5- Take pride in the pool and close umbrellas and stack chairs
-6- Remove trash after every visit
-</div> 
 
-<div>Pool Rules
-1- Children 0-5 must have an adult 16+ along
-2- Children 5-12 must have someone over 12
-3- No Running or Pushing
-4- One person at a time on the board
-5- Guests must be with a responsible member of the shareholders family.  Shareholders family defined as a direct family member, ie child/grandchild.
-</div>
 
 </body>
 
