--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 5
   <div class="content">
     <div class="inside">
-      <div>Duties for Clean up<br>
+      <div><b>Duties for Clean up</b><br>
         1- Check water level.  If the auto fill is not maintaining the level, let the president know<br>
         2- Strain debris from pool using skimmer on the wall<br>
         3- Clean restroom, put out new supplies if needed. Empty trash, report to president if supplies are needed<br>
@@ -95,7 +95,7 @@
         6- Remove trash after every visit<br>
         </div> 
         
-        <div>Pool Rules<br>
+        <div><b>Pool Rules</b><br>
         1- Children 0-5 must have an adult 16+ along<br>
         2- Children 5-12 must have someone over 12<br>
         3- No Running or Pushing<br>
