--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>1
+  <style>
     body {
       padding: 0px;
       margin: 0;
@@ -67,9 +67,9 @@
     }
   </style>
 </head>
-2
+
 <body>
- 3
+
   <div class="top-container">
     
     <a
@@ -78,12 +78,12 @@
     </a>
     <p></p>
   </div>
-4
+
   <div class="header" id="myHeader">
     <h2>Tierra Del Sol</h2>
     <p>Private Comunity Pool</p>
   </div>
-5
+
   <div class="content">
     <div class="inside">
       <div><b>Duties for Clean up</b><br>
