--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
         5- Take pride in the pool and close umbrellas and stack chairs<br>
         6- Remove trash after every visit<br>
         </div> 
-        
+        <br>
         <div><b>Pool Rules</b><br>
         1- Children 0-5 must have an adult 16+ along<br>
         2- Children 5-12 must have someone over 12<br>
         3- No Running or Pushing<br>
         4- One person at a time on the board<br>
         5- Guests must be with a responsible member of the shareholders family. Shareholders family defined as a direct family member, ie child/grandchild.<br>
-        </div>    
+        </div>   <br> <br>
     <iframe style="width:100%;height:600px;border:1px solid #777"
       src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&title=Cleaning%20%26%20Reserved&src=Y19mZjdkMjEyM2RhZGI3YmJhYmJmMTE3ZWJjZDQ2NWZiMTVhZDJiZmJjODliZTIzMjk5MzdmZjk0NWQ3MTJiOTMzQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y19sZTVkY3Rla2FuZm5xM2ZoamR2cjhic3I3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4&color=%23D50000"
       scrolling="no">This browser does not support Iframe</iframe><br>
