--- a/index.html
+++ b/index.html
@@ -86,13 +86,21 @@
 
   <div class="content">
     <div class="inside">
-      <script type="text/javascript" src="https://form.jotform.com/jsform/231159010544042"></script>
+      
+        <div><b>Pool Rules</b><br>
+        1- Children 0-5 must have an adult 16+ along<br>
+        2- Children 5-12 must have someone over 12<br>
+        3- No Running or Pushing<br>
+        4- One person at a time on the board<br>
+        5- Guests must be with a direct share holder family member, ie child/grandchild.<br>
+        6- Leave the pool organized and clean
+        </div>   <br> <br>
     <iframe style="width:100%;height:600px;border:1px solid #777"
       src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FDenver&title=Cleaning%20%26%20Reserved&src=Y19mZjdkMjEyM2RhZGI3YmJhYmJmMTE3ZWJjZDQ2NWZiMTVhZDJiZmJjODliZTIzMjk5MzdmZjk0NWQ3MTJiOTMzQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&src=Y19sZTVkY3Rla2FuZm5xM2ZoamR2cjhic3I3NEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%234285F4&color=%23D50000"
       scrolling="no">This browser does not support Iframe</iframe><br>
     <iframe style="width:100%;height:2000px;border:1px solid #777" src="https://calendly.com/tierradelsol-1/3hours"
       scrolling="no">This browser does not support Iframe</iframe>
-7
+7<script type="text/javascript" src="https://form.jotform.com/jsform/231159010544042"></script>
 
       <script>
         window.onscroll = function () { myFunction() };
