--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
 
   <div class="header" id="myHeader">
-    <h2>Tierra Del Sol</h2>
+    <h2>Tierra Del Sol New</h2>
     <p>Private Comunity Pool</p>
   </div>
 
